@@ -7,7 +7,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import org.apache.commons.io.IOUtils;
 import org.apache.http.auth.Credentials;
 import org.apache.http.auth.UsernamePasswordCredentials;
@@ -80,15 +80,15 @@ public class NetrcTest {
     }
 
     private void copyFileContents(String source, String destination) throws IOException {
-        try (InputStream sourceStream = Files.newInputStream(Paths.get(source));
-                OutputStream out = Files.newOutputStream(Paths.get(destination))) {
+        try (InputStream sourceStream = Files.newInputStream(Path.of(source));
+                OutputStream out = Files.newOutputStream(Path.of(destination))) {
             IOUtils.copy(sourceStream, out);
         }
     }
 
     private void copyResourceContents(String resource, String destination) throws IOException {
         try (InputStream sourceStream = this.getClass().getClassLoader().getResourceAsStream(resource);
-                OutputStream out = Files.newOutputStream(Paths.get(destination))) {
+                OutputStream out = Files.newOutputStream(Path.of(destination))) {
             IOUtils.copy(sourceStream, out);
         }
     }
@@ -106,19 +106,19 @@ public class NetrcTest {
     }
 
     @Test
-    public void testGetInstanceString() {
+    public void testGetInstanceString() throws Exception {
         Netrc netrc = Netrc.getInstance(testFilePath_1);
         assertNotNull(netrc);
     }
 
     @Test
-    public void testGetInstanceFile() {
+    public void testGetInstanceFile() throws Exception {
         Netrc netrc = Netrc.getInstance(new File(testFilePath_1));
         assertNotNull(netrc);
     }
 
     @Test
-    public void testGetCredentialsPath() {
+    public void testGetCredentialsPath() throws Exception {
         Netrc netrc = Netrc.getInstance(testFilePath_1);
         assertNotNull(netrc);
 
@@ -142,7 +142,7 @@ public class NetrcTest {
     }
 
     @Test
-    public void testGetCredentialsFile() {
+    public void testGetCredentialsFile() throws Exception {
         Netrc netrc = Netrc.getInstance(new File(testFilePath_1));
         assertNotNull(netrc);
 
@@ -166,7 +166,7 @@ public class NetrcTest {
     }
 
     @Test
-    public void testGetCredentialsModifyFile() throws IOException {
+    public void testGetCredentialsModifyFile() throws Exception {
         String testFilePath = testFilePath_1 + "_m";
 
         copyFileContents(testFilePath_1, testFilePath);
@@ -213,7 +213,7 @@ public class NetrcTest {
     }
 
     @Test
-    public void testGetCredentialsOtherFile() {
+    public void testGetCredentialsOtherFile() throws Exception {
         Netrc netrc = Netrc.getInstance(testFilePath_1);
         assertNotNull(netrc);
 
